# rust-typescript-type-def

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
src/: emit.rs  impls.rs  iter_def_deps.rs  iter_refs.rs  lib.rs  lib2.rs  type_expr.rs  type_info.rs
tests/: test.rs
