[workspace]
resolver = "2"
members = [
    ".",
    "./derive",
]

[package]
name = "typescript-type-def"
version = "0.1.0"
edition = "2018"
description = "Generate TypeScript type definitions for Rust types"
license = "MIT"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
keywords = ["typescript", "javascript", "serde", "json"]
categories = ["development-tools::ffi", "encoding", "web-programming"]
homepage = "https://github.com/dbeckwith/typescript-type-def"
documentation = "https://docs.rs/typescript-type-def"
repository = "https://github.com/dbeckwith/typescript-type-def"
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "Cargo.toml",
]

[dependencies]
typescript-type-def-derive = { version = "0.1.0", path = "./derive" }

[dev-dependencies]
difference = "2.0.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
