[workspace]
resolver = "2"
members = [
    ".",
    "./derive",
]

[package]
name = "typescript-type-def"
version = "0.3.1"
edition = "2018"
description = "Generate TypeScript type definitions for Rust types"
license = "MIT"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
keywords = ["typescript", "javascript", "serde", "json"]
categories = ["development-tools::ffi", "encoding", "web-programming"]
homepage = "https://github.com/dbeckwith/rust-typescript-type-def"
documentation = "https://docs.rs/typescript-type-def"
repository = "https://github.com/dbeckwith/rust-typescript-type-def"
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "Cargo.toml",
]

[features]
json_value = ["serde_json"]

[dependencies]
typescript-type-def-derive = { version = "=0.3.1", path = "./derive" }
serde_json = { version = "1.0.64", optional = true }

[dev-dependencies]
difference = "2.0.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde"] }
