[workspace]
resolver = "2"
members = [
    ".",
    "./derive",
]

[package]
name = "typescript-type-def"
version = "0.5.14"
edition = "2024"
description = "Generate TypeScript type definitions for Rust types"
license = "MIT"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
keywords = ["typescript", "javascript", "serde", "json"]
categories = ["development-tools::ffi", "encoding", "web-programming"]
homepage = "https://github.com/dbeckwith/rust-typescript-type-def"
documentation = "https://docs.rs/typescript-type-def"
repository = "https://github.com/dbeckwith/rust-typescript-type-def"
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "Cargo.toml",
]

[features]
json_value = ["serde_json"]

[dependencies]
typescript-type-def-derive = { version = "=0.5.14", path = "./derive" }
serde_json = { version = "1.0.150", optional = true }

[dev-dependencies]
difference = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["serde"] }
