[package]
name = "typescript-type-def-derive"
version = "0.3.0"
edition = "2018"
description = "Derive procedural macro for typescript-type-def"
license = "MIT"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
keywords = ["typescript", "javascript", "serde", "json"]
categories = ["development-tools::ffi", "encoding", "web-programming"]
homepage = "https://github.com/dbeckwith/rust-typescript-type-def"
documentation = "https://docs.rs/typescript-type-def"
repository = "https://github.com/dbeckwith/rust-typescript-type-def"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
ident_case = "1.0.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.73", default_features = false, features = ["visit-mut"] }
