[package]
name = "typescript-type-def-derive"
version = "0.5.12"
edition = "2018"
description = "Derive procedural macro for typescript-type-def"
license = "MIT"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
keywords = ["typescript", "javascript", "serde", "json"]
categories = ["development-tools::ffi", "encoding", "web-programming"]
homepage = "https://github.com/dbeckwith/rust-typescript-type-def"
documentation = "https://docs.rs/typescript-type-def"
repository = "https://github.com/dbeckwith/rust-typescript-type-def"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
ident_case = "1.0.1"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", default-features = false, features = ["visit-mut"] }
