[package]
name = "typescript-type-def-derive"
version = "0.5.14"
edition = "2024"
description = "Derive procedural macro for typescript-type-def"
license = "MIT"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
keywords = ["typescript", "javascript", "serde", "json"]
categories = ["development-tools::ffi", "encoding", "web-programming"]
homepage = "https://github.com/dbeckwith/rust-typescript-type-def"
documentation = "https://docs.rs/typescript-type-def"
repository = "https://github.com/dbeckwith/rust-typescript-type-def"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
ident_case = "1.0.1"
proc-macro-error3 = "3.0.2"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", default-features = false, features = ["visit-mut"] }
